# aspect

cookbooks/: S20RTS.prm
iapetus/: CMakeLists.txt  iapetus.cc  iapetus.prm  iapetus.py
include/aspect/: free_surface.h  parameters.h  simulator.h  simulator_signals.h
include/aspect/gravity_model/: centrifugal.h
include/aspect/initial_conditions/: spherical_boundary_layer.h
include/aspect/postprocess/: continent_drop.h  dynamic_topography.h  liouville.h
include/aspect/postprocess/visualization/: dynamic_topography.h
semucb/: CMakeLists.txt  SEMUCB.prm  V1.txt  V2.txt  mantle_model.py  mantle_model.txt  plot_depth_slice.py  semucb.cc
signals/: CMakeLists.txt  unmoor.cc
source/gravity_model/: centrifugal.cc
source/initial_conditions/: spherical_boundary_layer.cc
source/postprocess/: continent_drop.cc  dynamic_topography.cc  liouville.cc  visualization.cc
source/postprocess/visualization/: dynamic_topography.cc
source/simulator/: assembly.cc  checkpoint_restart.cc  core.cc  free_surface.cc  freesurface.cc  helper_functions.cc  parameters.cc  simulator_access.cc  solver.cc
tests/: dynamic_topography.prm  dynamic_topography2.prm
