CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

FIND_PACKAGE(Aspect REQUIRED HINTS ${ASPECT_DIR} ../ ../../ $ENV{ASPECT_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()

SET(TARGET "semucb")
PROJECT(${TARGET})
INCLUDE_DIRECTORIES( SEMUCB-WM1/include )

ADD_LIBRARY(${TARGET} SHARED semucb.cc SEMUCB-WM1/src/ucb_A3d.c)
ASPECT_SETUP_PLUGIN(${TARGET})
